--- a/nginx.conf
+++ b/nginx.conf
@@ -1,21 +1,21 @@
 server {
-    listen 0.0.0.0:8080;
-    listen [::]:8080;
+    listen 80;
+    sendfile on;
+    include mime.types;
     default_type application/octet-stream;
 
-    gzip                    on;
-    gzip_comp_level         6;
-    gzip_vary               on;
-    gzip_min_length         1000;
-    gzip_proxied            any;
-    gzip_types              text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-    gzip_buffers            16 8k;
-    gunzip on;
-    client_max_body_size    256M;
+    gzip on;
+    gzip_http_version 1.1;
+    gzip_disable      "MSIE [1-6]\.";
+    gzip_min_length   256;
+    gzip_vary         on;
+    gzip_proxied      expired no-cache no-store private auth;
+    gzip_types        text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_comp_level   9;
 
-    root /usr/share/nginx/html;
+    root /usr/share/nginx/html/;
 
-    location / {
-        try_files $uri $uri/ /index.html =404;
+    location ~* \.(js|css)$ { # Enable serving js and css files
+        try_files $uri $uri/ /browser/index.html =404;
     }
 }
